# DEAR

./: .atom-dbg.cson  .gitignore  CMakeLists.txt  README.md  update_deps_debug.sh
cmake/: FindDRM.cmake  FindEGL.cmake  FindGBM.cmake  FindInput.cmake  FindLibuv.cmake  FindSystemd.cmake  FindVulkan.cmake  FindWayland.cmake  FindXcb.cmake  FindXml.cmake  Findudev.cmake
misc/: Makefile  jpeg-test.cpp  svgtest.cpp  udev-test  udev.cpp
module/area/skybox/: CMakeLists.txt  skybox.cpp  skybox.frag  skybox.hpp  skybox.vert
module/user/: CMakeLists.txt
module/user/maindock/: CMakeLists.txt  maindock.cpp  maindock.frag  maindock.hpp  maindock.vert
module/user/startmenu/: CMakeLists.txt  startmenu.cpp  startmenu.frag  startmenu.hpp  startmenu.vert
src/: Config.cpp  Config.hpp  IPCMessage.cpp  IPCMessage.hpp  inputCode.hpp  interfaces.hpp  keys.h  main.cpp
src/area/: AreaSocket.hpp  CMakeLists.txt  Client.cpp  Server.cpp  Server.hpp  area.cpp  area.hpp  areaMain.cpp  controlHandler.hpp  display.cpp  display.hpp  displayXcb.cpp  displayXcb.hpp  user.cpp  user.hpp
src/backend/: Backend.cpp  Backend.hpp  BackendDisplayGL.cpp  BackendDisplayGL.hpp  BackendDisplayVK.cpp  BackendDisplayVK.hpp  BackendGL.cpp  BackendGL.hpp  BackendVK.cpp  BackendVK.frag  BackendVK.hpp  BackendVK.vert  BackendXcbGL.cpp  BackendXcbGL.hpp  BackendXcbVK.cpp  BackendXcbVK.hpp  Base.cpp  Base.hpp  CMakeLists.txt  Display.cpp  Display.hpp  OpenGL.cpp  VKinit.cpp  Vulkan.cpp  Wayland.cpp  Wayland.hpp  Xcb.cpp  Xcb.hpp
src/dearDM/: AreaNode.cpp  AreaNode.hpp  Backend.cpp  Backend.hpp  BackendBase.cpp  BackendBase.hpp  BackendDisplayVK.cpp  BackendDisplayVK.hpp  BackendVK.frag  BackendVK.vert  BackendXcbVK.cpp  BackendXcbVK.hpp  CMakeLists.txt  Config.hpp  main.cpp
src/greeter/: CMakeLists.txt  Greeter.cpp  Greeter.hpp  Greeter.vert  main.cpp
src/message/: CMakeLists.txt  IPCClient.cpp  IPCClient.hpp  IPCServer.cpp  IPCServer.hpp  TCPServer.cpp  TCPServer.hpp  message.hpp  messageBase.hpp  notice.hpp  reply.hpp  request.hpp
src/module/: areaModule.hpp  userModule.hpp
src/module/skybox/: CMakeLists.txt  skybox.cpp  skybox.hpp
src/session/: CMakeLists.txt  codemap.cpp  input.cpp  input.hpp  localMain.cpp  session.cpp  session.hpp
src/svg/: CMakeLists.txt  attributes.cpp  attributes.hpp  parser.cpp  parser.hpp  renderer.cpp  renderer.hpp  svg.cpp
src/svg/element/: element.cpp  element.hpp  elements.hpp  svgElem.cpp  svgElem.hpp
tools/: glslangValidator
